<resources>
    <string name="app_name">Finance Tracker</string>

    <!--balance signs-->
    <string name="usd_balance_sign" translatable="false">$</string>
    <string name="rub_balance_sign" translatable="false">₽</string>
    <string name="eur_balance_sign" translatable="false">€</string>

    <!--categories-->
    <string name="category_no">No category</string>
    <string name="category_travel">Travel</string>
    <string name="category_restaurant">Restaurant</string>
    <string name="category_groceries">Groceries</string>
    <string name="category_supermarkets">Supermarkets</string>
    <string name="category_education">Education</string>
    <string name="category_clothes">Clothes</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_transport">Transport</string>
    <string name="category_health">Health and beauty</string>
    <string name="category_media">Media</string>
    <string name="category_other">Other</string>

    <!--balance screen-->
    <string name="text_current_balance">Current balance:</string>
    <string name="title_transaction_list">TRANSACTIONS</string>
    <string name="title_transaction_filter">Filter</string>
    <string name="title_transaction_list_empty">Current history is empty</string>

    <!--about screen-->
    <string name="about_title">About</string>
    <string name="about_text">The app for managing your finances <b><i>Fintracker</i></b>.
        \n\nManage and monitor your cash flow in all currencies.</string>

    <!--Delete screen-->
    <string name="delete_title">Delete template</string>
    <string name="delete_text">Are you sure you want to delete template?</string>

    <!--settings screen-->
    <string name="settings_title">Settings</string>
    <string name="settings_currency_key" translatable="false">currency</string>
    <string name="settings_currency_default" translatable="false">USD</string>
    <string name="settings_wallets_key_edit" translatable="false">wallets_edit</string>
    <string name="settings_wallets_key_create" translatable="false">wallets_create</string>
    <string name="settings_currency_title">Currency</string>
    <string name="settings_wallets_title">Wallets</string>
    <string name="settings_wallets_title_edit">Manage existing wallets</string>
    <string name="settings_wallets_title_create">Create new wallet</string>
    <string name="settings_currency_summary">Select one custom currency</string>
    <string name="settings_wallets_summary_edit">Click to manage your current wallets</string>
    <string name="settings_wallets_summary_create">Click to create new wallet</string>
    <string name="settings_currency_last_update_key" translatable="false">settings_currency_last_update</string>
    <string name="settings_currency_last_update">Currency updated: %s</string>

    <!--drawer screen-->
    <string name="drawer_template_recurrent_create">Create new repeat payment</string>
    <string name="drawer_template_recurrent_edit">Edit existing repeat payment</string>
    <string name="drawer_template_transaction_title">Templates</string>
    <string name="drawer_template_recurrent_title">Repeat payment</string>
    <string name="drawer_template_create">Create new</string>
    <string name="drawer_template_edit">Manage existing payments</string>

    <!--transactions screen-->
    <string name="transaction_item_description">img</string>
    <string name="new_expense"> New expense</string>
    <string name="new_income">New income</string>
    <string name="pic_def_type" translatable="false">drawable</string>
    <string name="category_title_def_type" translatable="false">string</string>
    <string name="pattern_dateformat" translatable="false">dd.MM HH:mm</string>
    <string name="income_amount" translatable="false">+ %.1f %s</string>
    <string name="outcome_amount" translatable="false">- %.1f %s</string>
    <string name="empty_amount_message">Amount field should not be empty.</string>

    <!--add transaction screen-->
    <string name="hint_transaction_description">Description</string>
    <string name="hint_transaction_sum" translatable="false">0</string>
    <string name="add_transaction_title_wallet">Wallet</string>
    <string name="add_transaction_title_category">Category</string>
    <string name="add_transaction_title_recurrent">Repeat payment in  ..  days if needed</string>

    <!--recurrent manager screen-->
    <string name="recurrent_interval_hint">Repeat interval</string>
    <string name="title_description">Description</string>
    <string name="title_amount">Amount</string>

    <!--wallet item screen-->
    <string name="tv_custom_title">Default currency</string>

    <!--add wallet screen-->
    <string name="text_new_wallet_header">Add wallet</string>
    <string name="text_new_wallet_currency">Select currency</string>
    <string name="text_new_wallet_type">Select wallet type</string>
    <string name="hint_wallet_name">Enter wallet name</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="empty_name_message">Wallet name should not be empty.</string>

    <!--edit wallet screen-->
    <string name="edit_wallet_rename_and_delete">Rename or delete</string>
    <string name="edit_wallet_select">Select wallet</string>
    <string name="edit_wallet_delete">Delete</string>
    <string name="hint_edit_wallet_name">New wallet name</string>
    <string name="empty_fields_message">Rename or delete your wallet</string>

    <!--recurrents-->
    <string name="recurrent_period">Period: %d days</string>
    <string name="edit">Edit</string>
    <string name="last_payment">Last payment: </string>
    <string name="recurrent_empty_fields_message">Amount, interval and description should not be empty</string>

    <!--preferences-->
    <string name="pref_currency_usd" translatable="false">USD</string>
    <string name="pref_currency_rub" translatable="false">RUB</string>
    <string name="pref_currency_eur" translatable="false">EUR</string>
    <string name="pref_currency_usd_rub_key" translatable="false">currency_usd_rub</string>
    <string name="pref_currency_usd_rub_key_default" translatable="false">60</string>
    <string name="pref_currency_usd_eur_key" translatable="false">currency_usd_eur</string>
    <string name="pref_currency_usd_eur_key_default" translatable="false">0.86</string>
    <string name="pref_currency_timestamp_key" translatable="false">currency_timestamp</string>
    <string name="demo_wallet_name">Demo</string>
    <string name="all_wallets_name">All wallets</string>
    <string name="no_recurrent_payments">No recurrent payments</string>
    <string name="close_recurrent_list">Close recurrent list</string>
</resources>
