<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:id="@+id/settings_currency"
        android:key="@string/settings_currency_key"
        android:summary="@string/settings_currency_summary"
        android:title="@string/settings_currency_title" />

    <PreferenceCategory
        android:key="pref_key_storage_settings"
        android:title="@string/settings_wallets_title">

        <ListPreference
            android:id="@+id/settings_wallets_edit"
            android:key="@string/settings_wallets_key_edit"
            android:summary="@string/settings_wallets_summary_edit"
            android:title="@string/settings_wallets_title_edit" />

        <Preference
            android:id="@+id/settings_wallets_create"
            android:key="@string/settings_wallets_key_create"
            android:summary="@string/settings_wallets_summary_create"
            android:title="@string/settings_wallets_title_create" />
    </PreferenceCategory>

</PreferenceScreen>
