<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group"
        android:checkableBehavior="single">

        <item android:title="@string/settings_wallets_title">
            <menu>
                <item
                    android:id="@+id/drawer_wallets_create"
                    android:title="@string/settings_wallets_title_create" />
                <item
                    android:id="@+id/drawer_wallets_edit"
                    android:title="@string/settings_wallets_title_edit" />
            </menu>
        </item>

        <item android:title="@string/drawer_template_recurrent_title">
            <menu>
                <item
                    android:id="@+id/drawer_template_recurrent_edit"
                    android:title="@string/drawer_template_edit" />
            </menu>
        </item>

        <item
            android:id="@+id/drawer_settings"
            android:title="@string/settings_title" />
        <item
            android:id="@+id/drawer_about"
            android:title="@string/about_title" />

    </group>
</menu>