<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rv_wallet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:background="@color/colorPrimary">

    <TextView
        android:id="@+id/tv_header_wallet_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_wallet_select"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner_wallets_edit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/transparent" />

    <TextView
        android:id="@+id/tv_header_rename_and_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/edit_wallet_rename_and_delete"
        android:textColor="@android:color/darker_gray" />

    <EditText
        android:id="@+id/et_wallet_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_edit_wallet_name"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        tools:text="Wallet name" />

    <CheckBox
        android:id="@+id/cb_delete"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:text="@string/edit_wallet_delete" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel_edit"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_save_edit"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/colorAccent" />

    </LinearLayout>
</LinearLayout>
